# remote_control_protocol

./: .gitignore  Cargo.toml  Readme.md
src/: client.rs  common.rs  crypto.rs  message.rs  point.rs  server.rs
src/python/: client.py  message.py  requirements.txt
