[package]
name = "udp_networking_pratice"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "client"
path = "src/client.rs"

[[bin]]
name = "server"
path = "src/server.rs"

[dependencies]
rsautogui = "0.2.2"
serde = {version = "1.0.174", features = ["derive"]}
serde_cbor = "0.11.2"