[package]
name = "remote_control_protocol"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "client"
path = "src/client.rs"

[[bin]]
name = "server"
path = "src/server.rs"

[features]
default = ["bincode"]
cbor = []
bincode = []

[dependencies]
# rsautogui = "0.2.2"
serde = {version = "1.0.174", features = ["derive"]}
serde_cbor = "0.11.2"
# bincode = "1.3.3"
openssl = { version = "0.10.56", features = ["vendored"]}